# proloaf

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CHANGELOG.md  CONFIGURATION.md  COPYING.md  Dockerfile  GITLAB-CI.md  PKG-INFO  README.md  README_old.md  __init__.py  commit-history.txt  environment.yml  handle_commit_message.sh  index.html  index.json  index.xml  jupyterhub.sqlite  module.html.jinja2  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  sitemap.xml
01_MyNotebooks/: EDA_opsd_data.ipynb  Simple Transformer.ipynb  model.pth  model2.pth
01_TestNotebooks/: Untitled.ipynb  test.txt
about/: index.html  index.xml
community/: index.html  index.xml
docs/: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile_master  README.md  commit-history.txt  config-sogno.toml  config.toml  index.html  index.xml  lost_and_found.md
event_logging/: __init__.py  event_logging.py
js/: main.min.58cf026c413bcc8d9ac51cae3c9f98a6983c4ad449b431137fc299a5e843e833.js
notebooks/: A User Guide on the ProLoaF Forecast Performance Metrics.ipynb  Apply_ProLoaF_DE.ipynb  Configuration Helper.ipynb  Example DataSet for Tutorial.ipynb  ProLoaF applied and explained - Day-Ahead Forcasts on open data of the German load.ipynb  Step-by-step user guide on train.py.ipynb  Train and Benchmark Models.ipynb  User Guide on Saliency Maps.ipynb  data analysis_tko.ipynb  ssr analysis_tko.ipynb  thesis_tests_tko.ipynb  use cases_tko.ipynb  weekday_analysis.ipynb
oracles/: cluster1_GRU_gnll  cluster2_GRU_gnll  cluster3_GRU_gnll  cluster4_GRU_gnll  (+5 more)
(+197 files in other folders)
